src/index.css
/* ... */
button[disabled]{
  cursor: default;
}
.type_button{
  cursor: text;
}

select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-repeat: no-repeat;
  background-position-x: calc(100% - 6px);
  background-position-y: 50%;
  padding: var(--basis) calc(var(--basis_x2) + 14px) var(--basis) var(--basis_x2);

  background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
}
@media (prefers-color-scheme: dark) {
  select {
    background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
  }
}

button,
.clickable_card{
  --borderRadius: calc(0.3 * var(--body-font-size));
  border-radius: var(--borderRadius);
}
button.default,
button.square,
.clickable_card.square {
  --borderRadius: 0;
}
button.yellow {
  --button-background: var(--yellow);
  --button-color: var(--on-yellow);
}
button.green {
  --button-background: var(--green);
  --button-color: var(--on-green);
}
button.blue {
  --button-background: var(--blue);
  --button-color: var(--on-blue);
}
button.red {
  --button-background: var(--red);
  --button-color: var(--on-red);
}
button.text {
  --button-background: transparent;
  --button-color: var(--on-background);
}
button:focus,
.type_button:focus {
  --button-background: var(--background-contrast) !important;
  --button-color: var(--on-background) !important;
}
/* button:not([disabled]):hover{
  transform-origin: center center;
  transform: scale(1.05);
} */
button:not([disabled]).fakeHover:before,
button:not([disabled]):hover:before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: var(--background-contrast);
  /* mix-blend-mode: multiply; */
  opacity: 0.3;
  border-radius: var(--borderRadius);
}
button.text:not([disabled]).fakeHover:before,
button.text:not([disabled]):hover:before {
  opacity: var(--alpha-less);
  mix-blend-mode: normal;
  background-color: var(--on-background);
}
button.choosen:after {
  content: "";
  position: absolute;
  top: calc(-1 * var(--basis_x0_5));
  right: calc(-1 * var(--basis_x0_5));
  bottom: calc(-1 * var(--basis_x0_5));
  left: calc(-1 * var(--basis_x0_5));
  box-shadow: 0 0 0 var(--basis_x0_5) var(--on-background);
}
button:focus.choosen:after {
  box-shadow: 0 0 0 var(--basis_x0_5) var(--on-background-contrast);
}

.buttonRow button {
  --margin-right: calc(var(--basis) * 1.5);
  margin: var(--basis) var(--margin-right) calc(var(--basis) * .5) 0;
}
.buttonRow button:last-of-type {
  margin-right: 0;
}
.buttonRow.usesLinks button:last-of-type {
  margin-right: var(--margin-right);
}
.buttonRow.usesLinks a:last-of-type button {
  margin-right: 0;
}

button.hasIcon .icon {
  height: calc(1.25 * var(--body-font-size));
  width: auto;
  vertical-align: middle;

  margin-right: var(--basis);
  margin-left: calc(-1 * var(--basis));

  --bg-color: var(--button-color);
  --fg-color: var(--button-background);
}
button.hasIcon .icon:first-child:last-child {
  margin-right: 0;
  margin-left: 0;
}
button.hasIcon .icon.big {
  height: var(--basis_x8);
  width: auto;
}

button.hasIcon .icon.image {
  height: var(--basis_x16);
  margin-top: calc(-1 * var(--basis));
  margin-right: calc(-2 * var(--basis)) !important;
  margin-bottom: calc(-1 * var(--basis));
  margin-left: calc(-2 * var(--basis)) !important;
}
button.hasIcon span{
  vertical-align: middle;
}

.clickable_card {
  position: relative;
  cursor: pointer;
  padding: calc(0.5 * var(--body-font-size));
}
.clickable_card:before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  pointer-events: none;

  border-radius: var(--borderRadius);

  background-color: rgba(var(--on-background-rgb), 0);
}
.clickable_card.active:before,
.clickable_card:hover:before {
  background-color: rgba(var(--on-background-rgb), var(--alpha-less));
}

hr {
  margin: var(--basis_x4) 0;
  border: none;
  height: var(--basis_x0_2);
  background: var(--on-background);
}

blockquote {
  position: relative;
  padding-left: var(--basis);
}
blockquote::before {
  /* content: "”"; */
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: calc(-1 * var(--basis_x4));
  font-size: var(--basis_x4);
  border-right: var(--basis_x0_2) solid currentColor;
  width: var(--basis_x4);
  text-align: right;
  padding-right: var(--basis_x0_5);
  box-sizing: border-box;
}

img.emoji {
   height: 1em;
   width: 1em;
   margin: 0 .05em 0 .1em;
   vertical-align: -0.1em;
}

@media (max-width: 1000px) {
  .hideOnSmallScreen {
    display: none;
  }
}
@media (min-width: 1001px) {
  .hideOnBigScreen {
    display: none;
  }
}
@media (max-width: 1200px) {
  .hideOnScreenSmallerThan1200px {
    display: none;
  }
}
@media (min-width: 1201px) {
  .hideOnScreenBiggerThan1200px {
    display: none;
  }
}



/* reset/remove select styles */
.wrapped_select select {
  /* A reset of styles, including removing the default dropdown arrow */
  appearance: none;
  /* Additional resets for further consistency */
  background-color: transparent;
  border: none;
  padding: 0 1em 0 0;
  margin: 0;
  width: 100%;
  font-family: inherit;
  font-size: inherit;
  cursor: inherit;
  line-height: inherit;
  outline: none;

  padding: var(--basis) var(--basis_x2);
}
.wrapped_select select::-ms-expand {
  display: none;
}

/* wrap select in new styles */
.wrapped_select {
  position: relative;
  cursor: pointer;
  padding: 0;
}
.wrapped_select,
.wrapped_select select{
  width: calc(12 * var(--basis));
  padding: var(--basis) var(--basis_x2);
}
.wrapped_select select {
  margin: calc(-1 * var(--basis)) calc(-1 * var(--basis_x2));
}
/* ... */

